--- a/src/components/AddEditPage.css
+++ b/src/components/AddEditPage.css
@@ -130,8 +130,8 @@
 
 .add-edit__comment:hover .add-edit__comment-email {
   display: block;
-  -webkit-animation: slide-up 300ms forwards;
-          animation: slide-up 300ms forwards;
+  -webkit-animation: slide-up-edit 300ms forwards;
+          animation: slide-up-edit 300ms forwards;
 }
 
 .add-edit__comment-toggle-description {
@@ -171,7 +171,7 @@
   }
 }
 
-@-webkit-keyframes slide-up {
+@-webkit-keyframes slide-up-edit {
   0% {
     top: -20px;
   }
@@ -183,7 +183,7 @@
   }
 }
 
-@keyframes slide-up {
+@keyframes slide-up-edit {
   0% {
     top: -20px;
   }
