--- a/src/App.css
+++ b/src/App.css
@@ -90,7 +90,6 @@ a {
 }
 
 .nav {
-  background-color: rgba(116, 106, 176, 0.9);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -99,6 +98,12 @@ a {
           justify-content: space-between;
   font-size: 20px;
   font-weight: bold;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.nav__wrapper {
+  background-color: rgba(116, 106, 176, 0.9);
   -webkit-box-shadow: 0 2px 4px #2c3e50;
           box-shadow: 0 2px 4px #2c3e50;
   position: fixed;
