--- a/src/components/List/List.scss
+++ b/src/components/List/List.scss
@@ -1,8 +1,18 @@
-@import "../assets/style/variables.scss";
+@import "../../assets/style/variables.scss";
 
 .list {
   min-height: 100vh;
   max-width: 1200px;
+
+  &__scroll-trigger {
+    width: 30px;
+    height: 30px;
+    background-color: $yellow-pale;
+    border-radius: 50%;
+    margin: 0 auto;
+    box-shadow: 0 0 4px 1px $gray;
+    margin-bottom: 400px;
+  }
 }
 
 .list-item {
